[package]
name = "rmir"
version = "0.1.0"
edition = "2021"
authors = ["roxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.0"
serde_json = "1.0.81"

docker-compose-types = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.24"